--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.1.0",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
