--- a/sendgrid.env
+++ b/sendgrid.env
@@ -1,1 +1,1 @@
-export SENDGRID_API_KEY='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'
+export SENDGRID_API_KEY='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'
