--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "md5": "^2.2.1",
+    "mongodb": "^3.5.7",
     "mongoose": "^5.9.15",
     "multer": "^1.4.2",
     "pug": "^2.0.4",
